rocketmq/deployment.yaml
apiVersion: apps/v1beta2
kind: Deployment
metadata:
  name: rocketmq-console-ng2
  labels:
    k8s-app: rocketmq-console-ng2
spec:
  selector:
    matchLabels:
      k8s-app: rocketmq-console-ng2
  template:
    metadata:
      labels:
        k8s-app: rocketmq-console-ng2
    spec:
      imagePullSecrets:
        - name: ksyunregistrykey
      containers:
      - name: rocketmq-console-ng2
        image: hub.kce.ksyun.com/kbdp/rocketmq-console-ng:latest
        ports:
        - containerPort: 8080
          protocol: TCP
