rocketmq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocketmq-console-ng2
  labels:
    k8s-app: rocketmq-console-ng2
spec:
  selector:
    k8s-app: rocketmq-console-ng2
  ports:
  - port: 8080
    targetPort: 8080
